# bounties

./: .gitignore  CLAUDE.md  README.md  bounty-tracker.csv  surgical-bounties.md
000-docs/: 000-INDEX.md  001-BL-TRCK-payment-tracker.md  002-PM-BKLG-bounty-tracker.csv  003-DR-PLAN-master-bounty-portal.md  004-DR-PLAN-bounty-dev-master-plan-v4.md  005-AT-SPEC-bounty-system-overview.md  006-AT-SPEC-bobs-brain-overview.md  007-AT-SPEC-git-with-intent-overview.md  008-AT-SPEC-irsb-ethereum-overview.md  009-AT-DSGN-ultrathink-integration.md  (+2 more)
bounty-system/services/bounty-orchestrator/: .env.example  .gitignore  README.md  deploy.py  langgraph.json  main.py  pyproject.toml  requirements.txt
bounty-system/services/bounty-orchestrator/.github/workflows/: deploy.yml
bounty-system/services/bounty-orchestrator/bounty_agent/: __init__.py  agent.py  api.py  bobs_brain_client.py  memory.py  state.py
bounty-system/services/bounty-orchestrator/bounty_agent/knowledge/: __init__.py  learn.py  repo_sync.py
bounty-system/services/bounty-orchestrator/bounty_agent/nodes/: __init__.py  analyze.py  competition.py  execute.py  plan.py
bounty-system/services/bounty-orchestrator/bounty_agent/prompts/: __init__.py  analyze.py  implement.py
bounty-system/services/bounty-orchestrator/scripts/: setup-iam.sh
bounty-system/services/bounty-orchestrator/scripts/ci/: check_nodrift.sh
bounty-system/services/bounty-orchestrator/scripts/db/: init.sql  setup.py
bounty-system/services/bounty-orchestrator/tests/: __init__.py  test_api.py  test_bobs_brain_client.py  test_graph.py  test_state.py
(+90 files in other folders)
